--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "start": "webpack-dev-server"
   },
   "devDependencies": {
+    "css-loader": "^4.2.1",
+    "postcss-loader": "^3.0.0",
     "ts-loader": "^8.0.2",
+    "typed-css-modules": "^0.6.4",
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
