--- a/package.json
+++ b/package.json
@@ -3,9 +3,19 @@
     "build": "webpack",
     "start": "webpack-dev-server"
   },
+  "keywords": [
+  "css-modules",
+  "typescript"
+],
   "devDependencies": {
+    "@types/node": "^14.6.0",
+    "browserify": "^16.5.2",
+    "cpx": "^1.5.0",
     "css-loader": "^4.2.1",
+    "css-modulesify": "^0.28.0",
+    "opener": "^1.5.1",
     "postcss-loader": "^3.0.0",
+    "rimraf": "^3.0.2",
     "ts-loader": "^8.0.2",
     "typed-css-modules": "^0.6.4",
     "typescript": "^3.9.7",
@@ -18,6 +28,16 @@
     "@types/react-dom": "^16.9.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
+  },
+  "browserify": {
+    "transform": [
+      [
+        "brfs",
+        {
+          "ignore": "\\.(json|css)$"
+        }
+      ]
+    ]
   },
   "private": true
 }
