--- a/package.json
+++ b/package.json
@@ -1,43 +1,39 @@
 {
-  "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server"
-  },
-  "keywords": [
-  "css-modules",
-  "typescript"
-],
-  "devDependencies": {
-    "@types/node": "^14.6.0",
-    "browserify": "^16.5.2",
-    "cpx": "^1.5.0",
-    "css-loader": "^4.2.1",
-    "css-modulesify": "^0.28.0",
-    "opener": "^1.5.1",
-    "postcss-loader": "^3.0.0",
-    "rimraf": "^3.0.2",
-    "ts-loader": "^8.0.2",
-    "typed-css-modules": "^0.6.4",
-    "typescript": "^3.9.7",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
-  },
+  "name": "react-port",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@types/react": "^16.9.46",
-    "@types/react-dom": "^16.9.8",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.3",
+    "typescript": "~3.7.2"
   },
-  "browserify": {
-    "transform": [
-      [
-        "brfs",
-        {
-          "ignore": "\\.(json|css)$"
-        }
-      ]
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
-  },
-  "private": true
+  }
 }
