--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "css-loader": "3.4.2",
+    "css-loader": "^4.2.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.6.0",
@@ -56,7 +56,7 @@
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
-    "style-loader": "0.23.1",
+    "style-loader": "^1.2.1",
     "terser-webpack-plugin": "2.3.8",
     "ts-pnp": "1.1.6",
     "typescript": "~3.7.2",
@@ -140,5 +140,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "typings-for-css-modules-loader": "^1.7.0"
   }
 }
